  Features

  - Event notification is issued after application is created and
    configured.

0.3.4 (08/28/2008)

  Backwards incompatibilities

  - Make ``repoze.bfg`` a namespace package so we can allow folks to
    create subpackages (e.g. ``repoze.bfg.otherthing``) within
    separate eggs.  This is a backwards incompatible change which
    makes it impossible to import "make_app" and "get_options" from
    the ``repoze.bfg`` module directly.  This change will break all
    existing apps generated by the paster code generator.  Instead,
    you need to import these functions as
    ``repoze.bfg.router:make_app`` and
    ``repoze.bfg.registry:get_options``, respectively.  Sorry folks,
    it has to be done now or never, and definitely better now.

  Features

  - Add ``model_path`` API function to traversal module.

  Bugfixes

  - Normalize path returned by repoze.bfg.caller_path.

0.3.3 (8/23/2008)

  - Fix generated test.py module to use project name rather than package
    name.

0.3.2 (8/23/2008)

  - Remove ``sampleapp`` sample application from bfg package itself.

  - Remove dependency on FormEncode (only needed by sampleapp).

  - Fix paster template generation so that case-sensitivity is
    preserved for project vs. package name.

  - Depend on ``z3c.pt`` version 1.0a1 (which requires the ``[lxml]``
    extra currently).

  - Read and write a pickled ZCML actions list, stored as
    ``configure.zcml.cache`` next to the applications's "normal"
    configuration file.  A given bfg app will usually start faster if
    it's able to read the pickle data.  It fails gracefully to reading
    the real ZCML file if it cannot read the pickle.

0.3.1 (8/20/2008)

  - Generated application differences: ``make_app`` entry point
    renamed to ``app`` in order to have a different name than the bfg
    function of the same name, to prevent confusion.

  - Add "options" processing to bfg's ``make_app`` to support runtime