@@ -1,0 +1,12 @@
+.. _view_module:
+
+:mod:`repoze.bfg.view`
+----------------------
+
+.. automodule:: repoze.bfg.view
+
+  .. autofunction:: render_view_to_response
+
+  .. autofunction:: render_view_to_iterable
+
+  .. autofunction:: is_response
